<resources>
    <string name="app_name">Cyrus Birthday Reminder</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="birthday_list">Birthday List</string>
    <string name="add_bday">Add Birthday</string>
    <string name="edit_bday">Edit Birthday</string>
    <string name="clear_all">Clear All Birthdays</string>
    <string name="setting">Purpose</string>
    <string name="purpose">This birthday reminder app helps user remember and celebrate their friends birthdays by providing features such as creating, editing and deleting contacts and their birthdate.</string>
    <string name="developer">App Developed by Cyrus Shakya</string>

</resources>

